# geo-api

./: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  promote-prod.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-valhalla-build-vs-deploy-race.md  SEED-002-tile-server-deploy-blocks-import.md  SEED-003-bootstrap-runtime-doc-update.md  (+1 more)
alembic/: env.py
data/: SAMPLE_Address_Points.geojson  SAMPLE_MBIT2017.DBO.AddressPoint.kml  extract_nad_state.sh
docs/: BOOTSTRAP.md  BRANCHING.md  DR.md  E2E.md  OBSERVABILITY-REPORT.md  ZFS-STORAGE.md  geocoding-data-research.md
k8s/: ollama-deployment.yaml  ollama-pvc.yaml  ollama-service.yaml
loadtests/: geo_api_locustfile.py
postman/: CivPulse_Geo_API.postman_collection.json  Local_Dev.postman_environment.json
scripts/: 20_tiger_setup.sh  30_osm_setup.sh  dev-bootstrap.sh  docker-entrypoint.sh  download-tiger-data.sh  ollama-entrypoint.sh  provision-db.sql  seed.py
tests/: conftest.py  test_api_poi_search.py  test_api_reverse_geocode.py  test_api_route.py  test_api_tiles.py  test_batch_geocoding_api.py  test_batch_validation_api.py  test_cascade.py  test_census_provider.py  test_exception_handling.py  test_fuzzy_calibration.py  test_fuzzy_matcher.py  test_geocoding_api.py  test_geocoding_service.py  test_health.py  test_health_ready_sidecars.py  test_import_cli.py  test_llm_corrector.py  test_load_macon_bibb_cli.py  test_load_nad_cli.py  test_load_oa_cli.py  test_logging.py  test_macon_bibb_provider.py  test_metrics_endpoint.py  test_metrics_instrumentation.py  test_nad_provider.py  test_nominatim_provider.py  test_normalization.py  test_oa_provider.py  test_osm_cli.py  test_providers.py  test_request_id_middleware.py  test_scourgify_provider.py  test_shutdown.py  test_spell_corrector.py  test_spell_startup.py  test_tiger_cli.py  test_tiger_provider.py  test_tracing.py  test_validation_api.py  (+2 more)
(+451 files in other folders)
