[project]
name = "civpulse-geo"
version = "0.1.0"
description = "CivPulse geocoding and address validation service"
readme = "README.md"
authors = [
    { name = "Kerry Hatcher", email = "kerry@kerryhatcher.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "geoalchemy2>=0.18.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "usaddress-scourgify>=0.6.0",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
