[project]
name = "civpulse-geo"
version = "0.1.0"
description = "CivPulse geocoding and address validation service"
readme = "README.md"
authors = [
    { name = "Kerry Hatcher", email = "kerry@kerryhatcher.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "geoalchemy2>=0.18.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "usaddress-scourgify>=0.6.0",
    "psycopg2-binary>=2.9.11",
    "fiona>=1.10.0",
    "rich>=14.3.3",
    "symspellpy>=6.9.0",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-instrumentation-sqlalchemy==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "prometheus-client==0.24.1",
]

[project.scripts]
geo-import = "civpulse_geo.cli:app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: marks tests as end-to-end requiring a deployed service",
    "tiger: marks tests that require Tiger/Line data loaded (skipped otherwise)",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "httpx>=0.28.1",
    "locust>=2.43.4",
    "pyyaml>=6.0.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
